[gd_scene load_steps=7 format=3 uid="uid://sandbox_settings"]

[ext_resource type="Script" path="res://scripts/sandbox_settings.gd" id="1_script"]
[ext_resource type="FontFile" uid="uid://cflvlm6dee163" path="res://assets/fonts/editundo.ttf" id="2_font"]
[ext_resource type="Texture2D" path="res://assets/pieces/buttonborder.png" id="3_border"]
[ext_resource type="VideoStream" path="res://assets/vhs_overlay.ogv" id="4_vhs"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_normal"]
bg_color = Color(0.627, 0.627, 0.667, 1)
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_hover"]
bg_color = Color(0.784, 0.784, 0.824, 1)
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0

[node name="SandboxSettings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 1)

[node name="VHSOverlay" type="VideoStreamPlayer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
modulate = Color(1, 1, 1, 0.15)
stream = ExtResource("4_vhs")
autoplay = true
loop = true
expand = true

[node name="FallingPieces" type="Node2D" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBox" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Title" type="Label" parent="CenterContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.8, 1, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 48
text = "SANDBOX MODE"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="CenterContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 24
text = "Select AI Opponent Difficulty"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="CenterContainer/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="EloDisplay" type="Label" parent="CenterContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 72
text = "1000 ELO"
horizontal_alignment = 1

[node name="DifficultyLabel" type="Label" parent="CenterContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.2, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 24
text = "Medium - Balanced opponent"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="CenterContainer/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="SliderContainer" type="Control" parent="CenterContainer/VBox"]
custom_minimum_size = Vector2(600, 60)
layout_mode = 2

[node name="SliderTrack" type="ColorRect" parent="CenterContainer/VBox/SliderContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 20.0
offset_bottom = -20.0
color = Color(0.15, 0.15, 0.15, 1)

[node name="SliderFill" type="ColorRect" parent="CenterContainer/VBox/SliderContainer"]
layout_mode = 0
offset_top = 20.0
offset_right = 170.0
offset_bottom = 40.0
color = Color(0.8, 0.8, 0.2, 1)

[node name="EloSlider" type="HSlider" parent="CenterContainer/VBox/SliderContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
min_value = 600.0
max_value = 2000.0
step = 100.0
value = 1000.0

[node name="MinLabel" type="Label" parent="CenterContainer/VBox/SliderContainer"]
layout_mode = 0
offset_top = 45.0
offset_right = 50.0
offset_bottom = 60.0
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 14
text = "600"

[node name="MaxLabel" type="Label" parent="CenterContainer/VBox/SliderContainer"]
layout_mode = 0
offset_left = 560.0
offset_top = 45.0
offset_right = 600.0
offset_bottom = 60.0
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 14
text = "2000"

[node name="Spacer3" type="Control" parent="CenterContainer/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="CenterContainer/VBox"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 40

[node name="BackButtonFrame" type="NinePatchRect" parent="CenterContainer/VBox/ButtonContainer"]
custom_minimum_size = Vector2(180, 70)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("3_border")
texture_filter = 0
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="BackButton" type="Button" parent="CenterContainer/VBox/ButtonContainer/BackButtonFrame"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
theme_override_colors/font_color = Color(0.235, 0.235, 0.235, 1)
theme_override_colors/font_hover_color = Color(0.1, 0.1, 0.1, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_normal")
theme_override_styles/focus = SubResource("StyleBoxFlat_button_normal")
text = "< BACK"

[node name="StartButtonFrame" type="NinePatchRect" parent="CenterContainer/VBox/ButtonContainer"]
custom_minimum_size = Vector2(240, 70)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("3_border")
texture_filter = 0
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="StartButton" type="Button" parent="CenterContainer/VBox/ButtonContainer/StartButtonFrame"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
theme_override_colors/font_color = Color(0.235, 0.235, 0.235, 1)
theme_override_colors/font_hover_color = Color(0.1, 0.1, 0.1, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_normal")
theme_override_styles/focus = SubResource("StyleBoxFlat_button_normal")
text = "START GAME"

[node name="FadeOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[connection signal="pressed" from="CenterContainer/VBox/ButtonContainer/BackButtonFrame/BackButton" to="." method="_on_back_pressed"]
[connection signal="pressed" from="CenterContainer/VBox/ButtonContainer/StartButtonFrame/StartButton" to="." method="_on_start_pressed"]
